--- a/config/groups/developer.yml
+++ b/config/groups/developer.yml
@@ -2,11 +2,9 @@ recipes:
     global:
         - dotfiles::gitconfig
         - applications::ssh_config
+        - applications::packer
         - dotfiles::vim
         - dotfiles::workspace
-        - applications::mysql
-        - applications::php56
-        - applications::skylab
     mac_os_x:
         - applications::sublime_text_3
         - applications::gnu-tar
@@ -34,7 +32,6 @@ recipes:
         - osxdefaults::finder_search_the_current_folder_by_default
         - osxdefaults::finder_unhide_home
 attributes:
-    mysql_root_password: "password"
     homebrewalt:
         apps:
             - git
@@ -47,12 +44,10 @@ attributes:
             - siege
             - watch
             - rsync
-            - mongodb
-            - elasticsearch
+            - iterm2
         cask_apps:
             - imageoptim
             - imagealpha
-            - phpstorm
             - sequel-pro
             - sourcetree
     nodejs:
@@ -68,6 +63,3 @@ attributes:
         - kstrano
         - deliver
         - crafter
-    php-apps:
-        - composer
-        - php56-mongo
