--- a/config/people/daryl.yml
+++ b/config/people/daryl.yml
@@ -1,5 +1,5 @@
 groups:
-    - bash
+    - zsh
     - developer
 recipes:
     global:
@@ -66,9 +66,7 @@ attributes:
     dotfiles:
         vimusers:
             - root
-            - roderik
-        kdeploy:
-            hostname: dev
+            - daryl
         vim:
             bundle:
                 - sleuth: git://github.com/tpope/vim-sleuth.git
@@ -79,27 +77,25 @@ attributes:
                 - nerdtree: https://github.com/scrooloose/nerdtree.git
                 - vim-css-color: https://github.com/ap/vim-css-color
     git:
-        name: Roderik van der Veer
-        email: roderik.van.der.veer@kunstmaan.be
+        name: Daryl Robbins
+        email: drobbins@mygrocerydeals.com
     osxdefaults:
-        computername: Spektr
+        computername: daryl-vm
     authorization:
         sudo:
             users:
-                - roderik
+                - daryl
             passwordless: true
             include_sudoers_d: true
     homebrewalt:
         cask_apps:
             - google-drive
-            - things
             - dropbox
             - evernote
             - istat-menus
             - kaleidoscope
             - alfred
             - totalfinder
-            - spotify
             - bartender
             - hazel
             - sonos
@@ -117,4 +113,3 @@ attributes:
             - virtualbox
             - evernote
             - superduper
-            - microsoft-office
