--- a/config/people/daryl.yml
+++ b/config/people/daryl.yml
@@ -5,7 +5,6 @@ recipes:
     global:
         - dotfiles::sshconfig
     mac_os_x:
-        - applications::omnigraffle
         - applications::launchrocket
         - sudoalt::default
         - osxdefaults::dock_automatically_hide_and_show_the_dock
@@ -89,7 +88,8 @@ attributes:
             include_sudoers_d: true
     homebrewalt:
         cask_apps:
-            - google-drive
+            - 1password
+            - omnifocus
             - dropbox
             - evernote
             - istat-menus
@@ -107,9 +107,7 @@ attributes:
             - flashlight
             - couleurs
             - vagrant-manager
-            - cord
             - vagrant
-            - vmware-fusion
             - virtualbox
             - evernote
             - superduper
