--- a/config/groups/developer.yml
+++ b/config/groups/developer.yml
@@ -31,9 +31,27 @@ recipes:
         - osxdefaults::finder_disable_the_warning_when_changing_a_file_extension
         - osxdefaults::finder_search_the_current_folder_by_default
         - osxdefaults::finder_unhide_home
+        - osxdefaults::dock_automatically_hide_and_show_the_dock
+        - osxdefaults::dock_do_not_animate_opening_applications_from_the_dock
+        - osxdefaults::dock_enable_spring_loading_for_all_dock_items
+        - osxdefaults::dock_make_dock_icons_of_hidden_applications_translucent
+        - osxdefaults::dock_minimize_to_application
+        - osxdefaults::dock_set_the_icon_size_of_dock_items_to_36_pixels
+        - osxdefaults::dock_show_indicator_lights_for_open_applications_in_the_dock
+        - osxdefaults::dock_position_the_dock_on_the_left_side
+        - osxdefaults::dock_enable_highlight_hover_effect_for_the_grid_view_of_a_stack
+        - osxdefaults::dock_remove_the_animation_when_hiding_showing_the_dock
+        - osxdefaults::dock_remove_the_auto-hiding_dock_delay
+        - osxdefaults::menu_add_battery_percentage
+        - osxdefaults::menu_show_clock_with_date
+        - osxdefaults::mail_when_searching_do_not_include_trash
+        - osxdefaults::mail_copy_email_addresses_instead_of_names_in_mail
 attributes:
     homebrewalt:
         apps:
+            - awscli
+            - boot2docker
+            - docker
             - git
             - git-extras
             - wget
@@ -45,11 +63,32 @@ attributes:
             - watch
             - rsync
         cask_apps:
+            - dash
             - imageoptim
             - imagealpha
             - sourcetree
             - iterm2
             - atom
+            - istat-menus
+            - bartender
+            - hazel
+            - sonos
+            - caffeine
+            - tower
+            - handbrake
+            - slack
+            - flashlight
+            - couleurs
+            - vagrant-manager
+            - vagrant
+            - virtualbox
+        cask_fonts:
+            - anonymous-pro
+            - anonymous-pro-for-powerline
+            - inconsolata-dz
+            - inconsolata-dz-for-powerline
+            - source-code-pro
+            - source-code-pro-for-powerline
     nodejs:
         apps:
             - uglify-js
@@ -63,3 +102,36 @@ attributes:
         - kstrano
         - deliver
         - crafter
+    sublime_text_packages:
+        -
+            name: SideBarEnhancements
+            source: https://github.com/titoBouzout/SideBarEnhancements
+            branch: st3
+        -
+            name: GitGutter
+            source: https://github.com/jisaacks/GitGutter.git
+            branch: master
+        -
+            name: SCSS
+            source: https://github.com/MarioRicalde/SCSS.tmbundle.git
+            branch: SublimeText2
+        -
+            name: BracketHighlighter
+            source: https://github.com/facelessuser/BracketHighlighter.git
+            branch: ST3
+        -
+            name: Theme - Aqua
+            source: https://github.com/cafarm/aqua-theme.git
+            branch: master
+        -
+            name: Base16
+            source: https://github.com/chriskempson/base16-textmate.git
+            branch: master
+        -
+            name: ApplySyntax
+            source: https://github.com/facelessuser/ApplySyntax.git
+            branch: ST3
+        -
+            name: Theme - Flatland
+            source: git://github.com/thinkpixellab/flatland.git
+            branch: master
