--- a/config/default.yml
+++ b/config/default.yml
@@ -5,6 +5,7 @@ recipes:
     mac_os_x:
         - homebrewalt::default
         - nodejs::default
+        - osxdefaults::add_note_to_loginscreen
         - osxdefaults::disable_natural_scrolling
         - osxdefaults::disable_auto-correct
         - osxdefaults::enable_subpixel_font_rendering_on_non-apple_lcds
