Customize login message

--- a/config/default.yml
+++ b/config/default.yml
@@ -28,3 +28,5 @@ attributes:
             - alfred
             - parallels-desktop
             - skype
+osxdefaults:
+  loginmessage: Property of MyGroceryDeals. If found, please call +1 (613) 224-2525.
