--- a/config/groups/developer.yml
+++ b/config/groups/developer.yml
@@ -7,7 +7,6 @@ recipes:
         - dotfiles::workspace
     mac_os_x:
         - applications::iterm2
-        - applications::sublime_text_3
         - applications::atom
         - applications::gnu-tar
         - osxdefaults::set_terminal_profile
@@ -92,56 +91,6 @@ attributes:
         - kstrano
         - deliver
         - crafter
-    sublime_text_packages:
-        -
-            name: SideBarEnhancements
-            source: https://github.com/titoBouzout/SideBarEnhancements
-            branch: st3
-        -
-            name: GitGutter
-            source: https://github.com/jisaacks/GitGutter.git
-            branch: master
-        -
-            name: SCSS
-            source: https://github.com/MarioRicalde/SCSS.tmbundle.git
-            branch: SublimeText2
-        -
-            name: BracketHighlighter
-            source: https://github.com/facelessuser/BracketHighlighter.git
-            branch: ST3
-        -
-            name: Theme - Aqua
-            source: https://github.com/cafarm/aqua-theme.git
-            branch: master
-        -
-            name: Base16
-            source: https://github.com/chriskempson/base16-textmate.git
-            branch: master
-        -
-            name: ApplySyntax
-            source: https://github.com/facelessuser/ApplySyntax.git
-            branch: ST3
-        -
-            name: Theme - Flatland
-            source: git://github.com/thinkpixellab/flatland.git
-            branch: master
-        -
-            name: Haml
-            source: https://github.com/phuibonhoa/handcrafted-haml-textmate-bundle.git
-            branch: master
-        -
-            name: CoffeeScript
-            source: https://github.com/aponxi/sublime-better-coffeescript.git
-            branch: master
-        -
-            name: DashDoc
-            source: https://github.com/farcaller/DashDoc.git
-            branch: master
+        - guard
     atom_packages:
-    sublime_text:
-        preferences:
-            draw_white_space: selection
-            rulers:
-                - 80
-                - 120
-            tab_size: 2
+      
